fix: read CORS origins dynamically in SecurityConfig